--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layouts/layout}">
   <th:block layout:fragment="css">
-    <style></style>
+    <style>
+      /* 필요하면 스타일 추가 가능 */
+    </style>
   </th:block>
   <body layout:fragment="content">
-    <!-- <section class="hero">
-      <div class="container">
-      
-      
-      </div>
-    </section> -->
+    <!-- Hero Section (주석 처리된 상태) -->
+    <!--
+    <section class="hero">
+      <div class="container"></div>
+    </section>
+    -->
     <!-- Hero Section End -->
 
-    <!-- Head -->
     <!-- Product Section Begin -->
     <section class="product spad">
       <div class="container">
@@ -20,87 +21,73 @@
           <div class="trending__product">
             <div class="row"></div>
           </div>
+
           <div class="center-line"></div>
+
           <div class="popular__product">
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8">
                 <div class="section-title">
-                  <h4>영화미리보기</h4>
+                  <h4>추천영화</h4>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
-                  <div class="product__item mainmovie">
+
+              <!-- 영화 슬라이더: sliderContainerMovie / sliderMovie 로 클래스명 구분 -->
+              <div class="sliderContainerMovie" style="overflow-x: hidden; white-space: nowrap">
+                <div class="sliderMovie" style="display: inline-block">
+                  <div th:each="movie : ${movies}" style="display: inline-block; margin-right: 10px">
                     <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}">
                       <img
                         th:src="@{'/images/movieimages/' + ${movie.imgUrl}}"
                         onerror="this.onerror=null; this.src='/images/sample.png';"
                         alt="영화 이미지"
                         loading="lazy"
-                        class="anime__details__pic"
+                        style="width: 280px; height: 400px; object-fit: cover; display: block; border-radius: 10px"
                       />
                     </a>
-                    <!-- <div class="rank" th:text="${movie.rank}+위"></div> -->
-                    <div class="product__item__text">
-                      <h5>
-                        <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}" th:text="${movie.title}">제목</a>
-                      </h5>
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
+
             <br /><br /><br /><br /><br /><br />
+
             <div class="center-line"></div>
+
             <div class="popular__product">
-            <div class="row">
-              <div class="col-lg-8 col-md-8 col-sm-8">
-                <div class="section-title" >
-                  <h4>게임미리보기</h4>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="btn__all">
-                  <div class="primary-btn">
+              <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                  <div class="section-title">
+                    <h4>추천게임</h4>
                   </div>
                 </div>
-              </div>
-               <ul class="filter__controls">
-                <li class="active" data-filter="*">Day</li>
-                <li data-filter=".week">Week</li>
-                <li data-filter=".month">Month</li>
-                <li data-filter=".years">Years</li>
-              </ul>
-            <div class="filter__gallery"></div>
-            <div class="popular__product"></div>
-            <div class="row">
-              <div class="col-lg-4 col-md-6 col-sm-6" th:each="game : ${games}">
-                <div class="product__item">
-                  <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}">
-                    <img
-                      th:src="@{'/images/gameimages/' + ${game.imgUrl}}"
-                      onerror="this.onerror=null; this.src='/images/sample.png';"
-                      alt="게임 이미지"
-                      loading="lazy"
-                      class="anime__details__pic"
-                    />
-                  </a>
-                  <div class="rank" th:text="${game.rank}+위"></div>
-                  <div class="product__item__text">
-                    <h5>
-                      <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}" th:text="${game.title}">제목</a>
-                    </h5>
+
+                <!-- 게임 슬라이더: sliderContainerGame / sliderGame 로 클래스명 구분 -->
+                <div class="sliderContainerGame" style="overflow-x: hidden; white-space: nowrap; margin-top: 20px">
+                  <div class="sliderGame" style="display: inline-block">
+                    <div th:each="game : ${games}" style="display: inline-block; margin-right: 10px">
+                      <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}">
+                        <img
+                          th:src="@{'/images/gameimages/' + ${game.imgUrl}}"
+                          onerror="this.onerror=null; this.src='/images/sample.png';"
+                          alt="게임 이미지"
+                          loading="lazy"
+                          style="width: 500px; height: 300px; object-fit: cover; display: block; border-radius: 10px"
+                        />
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-       
       </div>
     </section>
+
     <th:block layout:fragment="script">
-      <!-- 개별 페이지 script 작성 -->
+      <!-- 개별 페이지 스크립트 -->
+      <script th:src="@{/js/imgSlider.js}"></script>
     </th:block>
   </body>
 </html>
